examples/errors/stringsslice.go
package errors

type StringSlice struct {
	Value []string
}
